# forgemaster

./: .claude-prompt.md  .claude-queue.sh  .cron-enhance-target  .gitignore  .opus-queue.md  A2A-DECOMPOSITION.md  ACG-DECOMPOSITION.md  AGENTIC-PRIMITIVES.md  AGENTS.md  ARCHITECTURE-BLUEPRINT.md  ARCHITECTURE-IRREDUCIBLE.md  ARCHITECTURE.md  AUTOMERGE-DECOMPOSITION.md  BOOT.md  BOTTLE-2026-05-13-NIGHTSHIFT-2.md  BOTTLE-2026-05-13-NIGHTSHIFT-3.md  BOTTLE-2026-05-13-NIGHTSHIFT-4.md  BOTTLE-2026-05-13-NIGHTSHIFT-FINAL.md  BOTTLE-2026-05-13-NIGHTSHIFT.md  BOTTLE-2026-05-13-SESSION-COMPLETE.md  CAMERA-LUCIDA.md  CHANGELOG.md  COMMS.md  CONSOLIDATION-PLAN.md  CONTRIBUTING-v2.md  CONTRIBUTING.md  CRATE-INVENTORY.md  CREWAI-DECOMPOSITION.md  CREWAI-PLATO-BRIDGE.md  CROSS-POLLINATION-SYNTHESIS.md  Cargo.toml  DREAMS.md  Dockerfile  Dockerfile.hebbian  ERRATA.md  EXPERIMENTS-AGNOSTIC.md  FIELD-GUIDE-SHELL-INHABITANTS.md  FLEET-CONTEXT-DISTILLATE.md  FLEET-STATUS-2026-05-13.md  FORGEMASTER-RUNTIME-SPEC.md  (+87 more)
cocapn-cli/: Cargo.toml  README.md
cocapn-cli/src/: format.rs  lib.rs  theme.rs  tide.rs
cocapn-glue-core/: Cargo.toml  README.md
cocapn-glue-core/src/: config.rs  lib.rs
cocapn-glue-core/tests/: glue_test.rs
constraint-theory-core-cuda/: Cargo.toml
constraint-theory-core-cuda/src/: cuda_ffi.rs  lib.rs
ct-demo/: Cargo.toml  PUBLISHING_CHECKLIST.md  README.md
ct-demo/examples/: bitmask_benchmark.rs  comparison.rs  solver_demo.rs
ct-demo/src/: lib.rs  solver.rs
ct-demo/tests/: integration.rs
experiments/snap-attention/: README.md  ade_snap_topologies.py  attention_budget_sim.py  learning_cycle_sim.py  poker_sim.py  pyproject.toml  pysheaf_integration.py  results_attention_budget.json  results_learning_cycle.json  results_poker.json  results_rubik.json  results_summary.json  results_transfer.json  rubik_sim.py  run_all.py  transfer_sim.py
fleet-math-py/: README.md  pyproject.toml  setup.py
fleet-math-py/fleet_math/: __init__.py  cyclotomic.py  eisenstein.py
fleet-math-py/tests/: test_cyclotomic.py
flux-ast/: CHANGELOG.md  Cargo.toml  README.md
flux-ast/src/: lib.rs
flux-compiler-workspace/fluxc-cli/: Cargo.toml
flux-hardware/: .gitignore  Cargo.toml  README.md  architecture_summary.py  bench_cpu_gpu_combined.py  build.rs
flux-hardware/asm/: README.md  flux_asm.py
flux-hardware/bridge/: CHANGELOG.md  Cargo.toml  README.md  flux_bridge.rs  flux_c_to_x.py
flux-hardware/compiler/: flux_ebpf_deploy.py  flux_llvm_backend.py  fluxc.py  fluxc_cli.py
flux-hardware/coq/: flux_p2.v  flux_vm_correctness.v  semantic_gap_theorem.v
flux-hardware/cpu/: flux_avx512.c  flux_avx512_jit.c  flux_avx512_optimized.c  flux_native_compiler.c  flux_retro_bench.c  flux_retro_optimized.c  flux_ultimate_bench.c
flux-hardware/cuda/: bench_cuda_graphs.py  bench_gpu_constraints.py  bench_gpu_v2.py  bench_multistream.py  bench_production_v2  bench_sm89.py  flux_cuda_advanced.cu  flux_cuda_graphs.cu  flux_cuda_kernels.cu  flux_cuda_sm89.cu  flux_tensor_cores.cu  test_differential.py
flux-hardware/ebpf/: flux_ebpf_constraint.c  flux_ebpf_loader.c
flux-hardware/embedded/: flux_embedded.h  test_flux_embedded  test_flux_embedded.c
flux-hardware/formal/: flux_checker_sby.sby  flux_checker_sby.sv  flux_formal_tb.sv  flux_verify.sby  flux_vm.tla
flux-hardware/fortran/: flux_constraint_kernel.f90
flux-hardware/fuzz/: flux_vm_fuzz.rs
flux-hardware/guard-examples/: retro-constraints.md
flux-hardware/hdc/: binarize_logic.py  flux_hdc.py  flux_hdc_avx512.c  flux_hdc_avx512.h  flux_hdc_avx512_bench.c  flux_hdc_bench  flux_hdc_judge.v  flux_kb.h  flux_kb.json  flux_kb.sram  flux_kb.vhex  flux_sram_bake.py  metal-bake-output.md
flux-hardware/rtl/: flux_checker.sv  flux_checker_top.sv  flux_rau_interlock.sv  flux_rau_interlock_tb.sv  hdc_judge.v
flux-hardware/src/: bytecode_validator.rs  lib.rs
flux-hardware/tests/: pipeline_e2e.rs  test_fleet_integration.py  test_perf_regression.py
flux-hardware/vm/: flux_vm.rs
flux-hardware/vulkan/: flux_constraint_vulkan.comp
flux-hardware/wasm/: flux_vm_wasm.c  flux_vm_wasm.js
flux-hardware/webgpu/: flux-test.html  flux_constraint_shader.wgsl  flux_webgpu.js
flux-isa/: CHANGELOG.md  Cargo.toml  README.md
flux-isa-edge/: Cargo.toml
flux-isa-edge/src/: bytecode.rs  config.rs  instruction.rs  main.rs  opcode.rs  server.rs  vm.rs
flux-isa-std/: Cargo.toml
flux-isa-std/src/: bytecode.rs  gate.rs  instruction.rs  opcode.rs  pipeline.rs  sonar_physics.rs  vm.rs
flux-isa-std/tests/: integration_test.rs
flux-isa-thor/: Cargo.toml  README.md
flux-isa-thor/benches/: bench_thor.rs
flux-isa-thor/src/: config.rs  lib.rs  server.rs  vm.rs
flux-isa-thor/tests/: thor_test.rs
flux-isa/examples/: CROSS-DOMAIN-README.md  cross_domain_demo.py
flux-isa/pyflux/: __init__.py  compat.py  plato_flux.py
flux-isa/src/: bytecode.rs  instruction.rs  lib.rs  opcode.rs  vm.rs
flux-provenance/: CHANGELOG.md  Cargo.toml  README.md
flux-provenance/src/: config.rs  lib.rs  main.rs
flux-provenance/tests/: provenance_test.rs
flux-tensor-midi/: PUBLISH-LOG.md  README.md  flux-tensor-midi-demo-player.html  flux-tensor-midi-demo-timeline.json  flux-tensor-midi-demo.mid  flux-tensor-midi-demo.vms  pyproject.toml  vms-render.py  vms.py
flux-tensor-midi/c/: CMakeLists.txt  README.md
flux-tensor-midi/cuda/: CMakeLists.txt  README.md
flux-tensor-midi/fortran/: CMakeLists.txt  (+6 more)
flux-transport/: Cargo.toml
flux-verify-api/: Cargo.toml  README.md
guard2mask/: Cargo.toml
holonomy-bounded/: Cargo.toml
plato-client/: pyproject.toml
plato-mud/: Cargo.toml
snapkit-c/: CMakeLists.txt  LICENSE  Makefile  README.md  benchmark  benchmark_o3  benchmark_os  snapkit-config.cmake.in  snapkit.pc.in
snapkit-python/: MANIFEST.in  README.md  pyproject.toml
snapkit-rs/: Cargo.toml  README.md
snapkit-rust/: Cargo.toml  LICENSE-APACHE  README.md
snapkit-v2/: OPTIMIZATION_REPORT.md  README.md  experiment_all.py  experiment_results.json  pyproject.toml
tensor-penrose/: Cargo.toml  pyproject.toml
zeitgeist-protocol/: Cargo.toml  README.md
(+3350 files in other folders)
