[package]
name = "constraint-theory-demo"
version = "0.5.1"
edition = "2021"
authors = ["Cocapn Org <team@cocapn.org>"]
description = "Self-contained constraint theory demo — snap, holonomy, angular NN, self-consistency quine on Pythagorean manifolds"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cocapn/ct-demo"
keywords = ["constraint-theory", "pythagorean", "holonomy", "singularity-free", "exact-arithmetic"]
categories = ["mathematics", "science", "algorithms"]
readme = "README.md"
rust-version = "1.75.0"

[lib]
name = "ct_demo"

[dependencies]
uuid = { version = "=1.4.1", features = ["v4"] }

[[example]]
name = "comparison"
path = "examples/comparison.rs"
