[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-math"
version = "0.1.0"
description = "Cyclotomic field, Eisenstein, and Penrose tiling operations for Cocapn"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "hypothesis>=6",
]
