[package]
name = "flux-isa-std"
version = "0.1.0"
edition = "2021"
authors = ["Casey Digennaro <casey@superinstance.com>"]
description = "Standard library FLUX ISA constraint VM for embedded Linux — Raspberry Pi to Jetson Nano edge nodes"
license = "Apache-2.0"
repository = "https://github.com/SuperInstance/forgemaster"
keywords = ["flux", "constraint", "embedded-linux", "raspberry-pi", "edge"]
categories = ["algorithms", "embedded", "science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dependencies.clap]
version = "4"
features = ["derive"]
