[package]
name = "flux-isa-thor"
version = "0.1.0"
edition = "2021"
authors = ["Casey Digennaro <casey@superinstance.com>"]
description = "Heavyweight FLUX ISA runtime for GPU-class edge — Jetson Thor / AGX Orin with CUDA, batch CSP solving, fleet coordination"
license = "Apache-2.0"
repository = "https://github.com/SuperInstance/forgemaster"
keywords = ["flux", "thor", "cuda", "gpu", "fleet"]
categories = ["algorithms", "asynchronous", "concurrency", "science"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
thiserror = "1"
dashmap = "5"
rayon = "1.10"
crossbeam = "0.8"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
hostname = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_thor"
harness = false
