[package]
name = "flux-provenance"
version = "0.1.0"
edition = "2021"
description = "Merkle provenance service for fleet verification traces"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
