[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "flux-tensor-midi"
version = "0.1.0"
description = "Musical protocol for fleet coordination — PLATO rooms as musicians, tiles as notes, FLUX as intent."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Casey Digennaro", email = "casey@superinstance.org" },
]
keywords = ["midi", "flux", "tensor", "plato", "fleet", "coordination", "music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/flux-tensor-midi"
Repository = "https://github.com/SuperInstance/flux-tensor-midi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["flux_tensor_midi"]
