[package]
name = "flux-verify-api"
version = "0.1.2"
edition = "2021"
description = "Natural Language Verification API — prove or disprove claims with mathematical traces"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
thiserror = "1"
hex = "0.4"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
axum-test = "14"
tower = "0.4"
rand = "0.8"
