[package]
name = "guard2mask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }  # CLI
thiserror = "1.0"                                    # Type-safe errors
nom = { version = "7.1", features = ["derive", "alloc"] }  # DSL Parser
gds21 = "0.7"                                        # GDSII Export
hashbrown = "0.14"                                   # Fast HashMaps
itertools = "0.12"                                   # Iterator utilities
anyhow = "1.0"                                        # Top-level error handling
rand = { version = "0.8", features = ["small_rng"] } # CSP search heuristics
