[package]
name = "plato-mud"
version = "0.1.0"
edition = "2021"
description = "PLATO MUD Engine — constraint-theory knowledge rooms with FLUX transference"
license = "MIT"

[features]
default = ["std", "server", "client"]
std = ["serde/std", "serde_json", "serde_cbor", "sqlite"]
server = ["std"]
client = ["std"]
full = ["default"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true }
serde_cbor = { version = "0.11", optional = true }
sqlite = { version = "0.36", optional = true }

[dev-dependencies]

[lib]
name = "plato_mud"
path = "src/lib.rs"

[[bin]]
name = "plato-server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "plato-client"
path = "src/bin/client.rs"
required-features = ["client"]

[profile.release]
opt-level = "s"
lto = true
strip = true
