[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapkit"
version = "2.0.0"
description = "Eisenstein lattice snap, temporal analysis, and connectome detection for the Cocapn fleet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Forgemaster", email = "forgemaster@superinstance.org" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/snapkit-v2"
Repository = "https://github.com/SuperInstance/snapkit-v2"

[tool.hatch.build.targets.wheel]
packages = ["snapkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.unittest]
testpaths = ["tests"]
