[package]
name = "tensor-penrose"
version = "0.1.0"
edition = "2021"
description = "Constraint tensor framework — tensors on Penrose tilings with pluggable lattice backends"

[dependencies]
fleet-math-c = { path = "../fleet-math-c" }
penrose-memory = { path = "../penrose-memory" }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }

[features]
default = ["eisenstein-backend", "penrose-backend"]
eisenstein-backend = []
penrose-backend = []
cli = []
python = ["pyo3", "numpy"]

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "pt"
path = "src/main.rs"

[lib]
name = "tensor_penrose"
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "tiling_bench"
harness = false
[workspace]

