[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tensor-penrose"
version = "0.1.0"
description = "Constraint tensors on Penrose tilings — like PyTorch, but the tensors have positions"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["python"]
module-name = "tensor_penrose._tensor_penrose"
