[package]
name = "zeitgeist-protocol"
version = "0.1.0"
edition = "2021"
description = "Zeitgeist Protocol — FLUX transference specification and reference implementation"

[dependencies]
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
proptest = "1"
